Geometry nodes. Socket state stucks in single value state #93920

Closed
opened 2021-12-10 00:32:11 +01:00 by Vyacheslav Kobozev · 12 comments

System Information
Operating system: Windows-8.1-6.3.9600-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.41

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-12-05 22:47, hash: 3f7014ecc9

For example if I connect single value input socket (svs) to field output, last one become svs.
But if I connect field input to svs, it will not force the last to change its state to field output.
Okay, it is not necessary to input field to field, but when all inputs and outputs disconnected, IMO node should reset types of sockets to default states.

2021-12-10_02-24-23.mp4
stucked.blend

**System Information** Operating system: Windows-8.1-6.3.9600-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.41 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-12-05 22:47, hash: `3f7014ecc9` For example if I connect single value input socket (svs) to field output, last one become svs. But if I connect field input to svs, it will not force the last to change its state to field output. Okay, it is not necessary to input field to field, but when all inputs and outputs disconnected, IMO node should reset types of sockets to default states. [2021-12-10_02-24-23.mp4](https://archive.blender.org/developer/F12724020/2021-12-10_02-24-23.mp4) [stucked.blend](https://archive.blender.org/developer/F12724024/stucked.blend)

Added subscriber: @Vyach

Added subscriber: @Vyach
Member

Added subscribers: @JacquesLucke, @HooglyBoogly

Added subscribers: @JacquesLucke, @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Haha, this is an funny one! I'm not actually sure it's technically a bug, but it sure doesn't make much sense.

You'll notice, if you switch back to the geometry mode on the switch node, that the old "X->False(Geometry)" link is still there. That's because the geometry sockets are still there, they're just hidden.

A few options I think:

  • Make the code that decides whether sockets should be fields ignore these hidden links.
  • Remove the old links when switching types, instead of keeping them around.
  • Switch the links to the new socket when switching types.
  • Wait to fix this until we have proper multi-type sockets.

@JacquesLucke Any opinion on which option is best? I like either 1 or 4.

Haha, this is an funny one! I'm not actually sure it's technically a bug, but it sure doesn't make much sense. You'll notice, if you switch back to the geometry mode on the switch node, that the old "X->False(Geometry)" link is still there. That's because the geometry sockets are still there, they're just hidden. A few options I think: - Make the code that decides whether sockets should be fields ignore these hidden links. - Remove the old links when switching types, instead of keeping them around. - Switch the links to the new socket when switching types. - Wait to fix this until we have proper multi-type sockets. @JacquesLucke Any opinion on which option is best? I like either 1 or 4.
Member

We could probably ignore unavailable sockets in the field inferencing in more places. Not sure if that has negative side effects, but I can't think of any right now.

We could probably ignore unavailable sockets in the field inferencing in more places. Not sure if that has negative side effects, but I can't think of any right now.

In #93920#1269842, @HooglyBoogly wrote:
Haha, this is an funny one! I'm not actually sure it's technically a bug, but it sure doesn't make much sense.

You'll notice, if you switch back to the geometry mode on the switch node, that the old "X->False(Geometry)" link is still there. That's because the geometry sockets are still there, they're just hidden.

Oh, forgot about it.
At one hand keeping the old root will keep the root in the case with accidental switch.
But, if Undo works properly, there is no need to keep the root, perhaps?
And yes, ofc old root (if it kept) shouldn`t determine socket type.

Switching link to new socket will be good for me, even if sockets incompatible. Motivation: I can insert convertor or cut, or switch back, without scrolling long tree.
In case of autocut and big distance between nodes I will be forced to find both and reconnect, or undo, insert reroute and switch. That is longer.

> In #93920#1269842, @HooglyBoogly wrote: > Haha, this is an funny one! I'm not actually sure it's technically a bug, but it sure doesn't make much sense. > > You'll notice, if you switch back to the geometry mode on the switch node, that the old "X->False(Geometry)" link is still there. That's because the geometry sockets are still there, they're just hidden. Oh, forgot about it. At one hand keeping the old root will keep the root in the case with accidental switch. But, if Undo works properly, there is no need to keep the root, perhaps? And yes, ofc old root (if it kept) shouldn`t determine socket type. Switching link to new socket will be good for me, even if sockets incompatible. Motivation: I can insert convertor or cut, or switch back, without scrolling long tree. In case of autocut and big distance between nodes I will be forced to find both and reconnect, or undo, insert reroute and switch. That is longer.

Added subscriber: @1D_Inc

Added subscriber: @1D_Inc

I think it is a matter of a node setup readability - the entire setup obtained this way (by locking value with another node) is implicit,
so it will be hard to read such a setups in case if it is made by other person who knows what's up and how exactly value was locked.
It will be impossible to reproduce such a setup from a screenshot, for example, having the same predictable result.
Implicit value typing is an issue.

I think it is a matter of a node setup readability - the entire setup obtained this way (by locking value with another node) is implicit, so it will be hard to read such a setups in case if it is made by other person who knows what's up and how exactly value was locked. It will be impossible to reproduce such a setup from a screenshot, for example, having the same predictable result. Implicit value typing is an issue.
Member

Totally agree. The way we handle type switching and hidden links is quite bad. We've been talking a bit about proper multi-type socket declarations recently, my hope is that will give us an opportunity to improve this.
I like the idea of switching the link to the new socket, I think that would be the best behavior.

Totally agree. The way we handle type switching and hidden links is quite bad. We've been talking a bit about proper multi-type socket declarations recently, my hope is that will give us an opportunity to improve this. I like the idea of switching the link to the new socket, I think that would be the best behavior.

I double, that there shouldn`t be hidden links.
But keeping route connected (to any new socket, even incompatible) is better than autocut, just because generally it is easier to cut route, than to reconnect it.

2021-12-13_03-28-30.mp4

I double, that there shouldn`t be hidden links. But keeping route connected (to any new socket, even incompatible) is better than autocut, just because generally it is easier to cut route, than to reconnect it. [2021-12-13_03-28-30.mp4](https://archive.blender.org/developer/F12735550/2021-12-13_03-28-30.mp4)

This issue was referenced by b44a500988

This issue was referenced by b44a500988f3d6aea631d17ca383c8ced55e4371
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2021-12-14 15:31:14 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93920
No description provided.