Fix T93920: Wrong field inferencing state with unavailable socket

This commit ignores unavailable sockets in one more place, to fix the
case in T93920.

Differential Revision: https://developer.blender.org/D13562