source/blender/blenkernel/intern/node.cc
@@ -4748,7 +4748,9 @@ static void propagate_data_requirements_from_right_to_left(
       /* The output is required to be a single value when it is connected to any input that does
        * not support fields. */
       for (const InputSocketRef *target_socket : output_socket->directly_linked_sockets()) {
-        state.requires_single |= field_state_by_socket_id[target_socket->id()].requires_single;
+        if (target_socket->is_available()) {
+          state.requires_single |= field_state_by_socket_id[target_socket->id()].requires_single;
+        }
       }
 
       if (state.requires_single) {
